warning ad dark mode fix

--- a/css/rank-sellers-v2-dev.css
+++ b/css/rank-sellers-v2-dev.css
@@ -4,7 +4,7 @@
   --title-color: #ffffff;
   --text-shadow-color: #000000;
   --credits-footer-color: #6c757d;
-  --seller-list-background: rgba(255, 255, 255, 0.2);
+  --seller-list-background: rgba(255, 255, 255, 0.0);
   --seller-card-background: #f1f1f1;
   --box-shadow-color: rgba(0, 0, 0, 0.1);
   --box-shadow-hover-color: rgba(255, 255, 255, 0.3);
@@ -65,7 +65,7 @@ a.seller-card {
   text-decoration: none;
 }
 
-a.seller-card-inactive {
+a.seller-card-inactive2 {
   text-decoration: none;
 }
 
@@ -104,8 +104,8 @@ footer {
   box-shadow: 0 4px 8px var(--box-shadow-color);
 }
 
-.seller-card,
-.seller-card-inactive {
+.seller-card2,
+.seller-card-inactive2 {
   backdrop-filter: blur(8px) saturate(180%);
   -webkit-backdrop-filter: blur(8px) saturate(180%);
   background-color: rgba(255, 255, 255, 0.2);
@@ -124,33 +124,34 @@ footer {
   position: relative;
 }
 
-.darkmode .seller-card {
+.darkmode .seller-card2 {
   background-color: rgba(36, 36, 36, 0.6);
 }
 
-.seller-card-inactive {
+.seller-card-inactive2 {
   border: 1px solid rgba(255, 0, 0, 0.3);
-  background-color: rgba(255, 150, 159, 0.4);
+  background-color: rgba(255, 255, 255, 0.2);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1), rgba(255, 0, 0, 0.4));
 }
 
-.darkmode .seller-card-inactive {
+.darkmode .seller-card-inactive2 {
   background-color: rgba(100, 36, 36, 0.4);
 }
 
-.seller-card:hover,
-.seller-card-inactive:hover {
+.seller-card2:hover,
+.seller-card-inactive2:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px var(--box-shadow-seller-card-hover);
 
 }
 
-.seller-card img {
+.seller-card2 img {
   height: 47px;
   width: auto;
   border-radius: 4px;
 }
 
-.seller-card-inactive img {
+.seller-card-inactive2 img {
   height: 47px;
   width: auto;
   border-radius: 4px;
